# advanced_rust

./: Cargo.toml  README.md  workspace.md
app/: Cargo.toml
app/src/: main.rs
chapter01/: Cargo.toml
chapter01-log/: Cargo.toml  log.md
chapter01-log/examples/: log1-env_logger.rs  log2-tracing.rs
chapter01-log/src/: lib.rs
chapter02/: Cargo.toml
chapter02-feature/: Cargo.toml  feature.md
chapter02-feature/src/: lib.rs
chapter03-ownership/: Cargo.toml  ownership.md
chapter03-ownership/src/: ownership1-borrow-mut.rs  ownership3-clone.rs  ownership4-borrow-sum.rs  ownership5-move-sum.rs
chapter04-lifecycle/: Cargo.toml  lifecycle.md
chapter04-lifecycle/src/: lifecycle1.rs
chapter05-memory/: Cargo.toml  memory.md
chapter05-memory/src/: memory1-enum.rs
chapter06-type/: Cargo.toml  type.md
chapter06-type/src/: type1-paramiter.rs  type2-func.rs  type3-related-trait.rs  type6-asref.rs  type7-deref.rs
chapter07-pointer/: Cargo.toml  pointer.md
chapter07-pointer/src/: pointer1-cow.rs  pointer2-mutexGuard.rs
chapter08-vec/: Cargo.toml  vec.md
chapter08-vec/src/: vec1-slice.rs
chapter09-hash/: Cargo.toml  hash.md  hashmap.md
chapter09-hash/src/: hash1-cap.rs  hash1-hashmap.rs  hash3-btreemap.rs
chapter10-error/: Cargo.toml  error.md
chapter10-error/src/: error1-match.rs  error1-transfer.rs  error2-customerror.rs  error3-anyhow.rs
chapter11-closure/: Cargo.toml  closure.md
chapter11-closure/src/: closure1-size.rs  closure2-fnonce.rs  closure3-fnmut.rs
chapter12-unsafe/: Cargo.toml  unsafe.md
chapter13-atomic_n_ordering/: Cargo.toml  ordering.md
chapter13-atomic_n_ordering/src/: ordering1.rs  ordering2.rs
chapter14-concurrecy/: Cargo.toml  concurrency.md
chapter14-concurrecy/src/: 01_convar.md  02_future.md  03_tokio.md  concurrency1_convar.rs  concurrency2_future.rs  concurrency4_pin_stack.rs  concurrency5_pin_heap.rs  concurrency6_tokio_main.rs  concurrency7_tokio_mpsc.rs  concurrency8_tokio_watch.rs  concurrency9_tokio_select.rs
chapter15-macro/: Cargo.toml  macro.md
chapter15-macro/examples/: macro1-declarativemacro.rs  macro2-declarativemacro-hygiene.rs  macro3-derive-macro.rs  macro4-attribute-macro.rs  macro5-function-macro.rs
chapter15-macro/src/: builder.rs  constant_string.rs  into_hash_map.rs  lib.rs  log_duration.rs
