[workspace]
members = ["app", "chapter01-log",
    "chapter02-feature", "chapter03-ownership",
    "chapter04-lifecycle", "chapter05-memory", "chapter06-type",
    "chapter07-pointer", "chapter08-vec", "chapter09-hash", "chapter10-error", "chapter11-closure"]


[workspace.dependencies]
serde = { version = "1.0.201" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Danny"]
