[package]
name = "chapter03-ownership"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "ownership1"
path = "src/ownership1-borrow-mut.rs"


[[bin]]
name = "ownership2"
path = "src/ownership2-copy.rs"



[[bin]]
name = "ownership3"
path = "src/ownership3-clone.rs"


[[bin]]
name = "ownership4"
path = "src/ownership4-borrow-sum.rs"

[[bin]]
name = "ownership5"
path = "src/ownership5-move-sum.rs"
