[package]
name = "chapter07-pointer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
lazy_static = "1"



[[bin]]
name = "pointer1"
path = "src/pointer1-cow.rs"


[[bin]]
name = "pointer"
path = "src/pointer2-mutexGuard.rs"